Add Google site verification meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shpnlst</title>
+    <meta name="google-site-verification" content="V735Z0t6chQPCCP2QB_Zes6GJl42a2nLCmgFcOCvFKc" />
   </head>
   <body>
     <div id="root"></div>
